kubernetes/car/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: car
spec: 
  selector:
    app: car
  ports:
    - name: http
      nodePort: 
      port: 80
      targetPort: 8080
  type: ClusterIP
